--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>Suraj Solanki</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-image: url('background.jpg');
+            background-size: cover;
+            color: #333;
+            margin: 0;
+            padding: 20px;
+        }
+
+        .container {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+
+        h2 {
+            margin-top: 20px;
+            color: #333;
+        }
+
+        p {
+            line-height: 1.6;
+        }
+
+        .link-section a {
+            display: block;
+            margin-bottom: 10px;
+            text-decoration: none;
+            color: #333;
+            transition: color 0.3s;
+        }
+
+        .link-section a:hover {
+            color: #007bff;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <h1>Suraj Solanki</h1>
+        <img src="IMG_20230815_163841_302.jpg" alt="Suraj Solanki" style="display: block; margin: 0 auto; border-radius: 50%; width: 200px; height: 200px;">
+
+        <h2>About Me</h2>
+        <p>Skilled Cloud & DevOps Engineer having 4 years of experience in deploying and maintaining Infrastructure on AWS cloud. Passionate about learning technologies and solving problems in the industry.</p>
+
+        <div class="link-section">
+            <h2>Explore More</h2>
+            <a href="blog.html">Visit Blog</a>
+            <a href="contact.html">Contact Me</a>
+        </div>
+
+        <div class="social-links">
+            <h2>Connect with Me</h2>
+            <a href="https://www.linkedin.com/in/suraj-solanki/">
+                <img src="linkedin.png" alt="LinkedIn" width="20" height="20">
+            </a>
+            <a href="https://surajblog.medium.com">
+                <img src="medium.svg" alt="Medium" width="20" height="20">
+            </a>
+            <h2>Social Media</h2>
+            <a href="https://www.youtube.com/channel/UCOnzoAgntLFeKEsHWkL2x8A">
+                <img src="yt.png" alt="YouTube" width="20" height="20">
+            </a>
+            <a href="https://surajblog.medium.com">
+                <img src="instagram.svg" alt="instagram" width="20" height="20">
+            </a>
+
+        </div>
+    </div>
+</body>
+
+</html>
