--- a/blog.html
+++ b/blog.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <title>My Blog</title>
+    <title>Technical Blogs on DevOps, Cloud & More!!</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('your-background-image.jpg');
+            background-image: url('background.jpg');
             background-size: cover;
             color: #333;
             margin: 0;
@@ -56,8 +56,8 @@
         <!-- Add your blog posts here -->
 
         <div class="link-section">
-            <a href="blog-post1.html">Blog Post 1</a>
-            <a href="blog-post2.html">Blog Post 2</a>
+            <a href="https://medium.com/@surajblog/velero-for-kubernetes-backup-and-restore-10fba3a5efa4">Blog Post 1</a>
+            <a href="https://medium.com/@surajblog/external-secret-operator-integration-with-azure-key-vault-6eea4168bfeb">Blog Post 2</a>
             <!-- Add more blog posts as needed -->
         </div>
     </div>
