--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-image: url('your-background-image.jpg');
+            background-image: url('background.jpg');
             background-size: cover;
             color: #333;
             margin: 0;
@@ -57,7 +57,7 @@
         <div class="social-links">
             <a href="https://www.youtube.com/channel/UCOnzoAgntLFeKEsHWkL2x8A">YouTube</a>
             <a href="https://www.linkedin.com/in/suraj-solanki">LinkedIn</a>
-            <a href="https://surajblog.medium.com">Medium Blog</a>
+            <a href="https://www.instagram.com/suraj_inreallife/?hl=en">Instagram</a>
         </div>
     </div>
 </body>
