--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         }
 
         .container {
-            background-color: #fff;
+            background-color: #ffffff12;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -65,17 +65,17 @@
         <div class="social-links">
             <h2>Connect with Me</h2>
             <a href="https://www.linkedin.com/in/suraj-solanki/">
-                <img src="linkedin.png" alt="LinkedIn" width="20" height="20">
+                <img src="linkedin.png" alt="LinkedIn" width="30" height="30">
             </a>
             <a href="https://surajblog.medium.com">
-                <img src="medium.svg" alt="Medium" width="20" height="20">
+                <img src="medium.svg" alt="Medium" width="30" height="30">
             </a>
             <h2>Social Media</h2>
             <a href="https://www.youtube.com/channel/UCOnzoAgntLFeKEsHWkL2x8A">
-                <img src="yt.png" alt="YouTube" width="20" height="20">
+                <img src="yt.png" alt="YouTube" width="30" height="30">
             </a>
-            <a href="https://surajblog.medium.com">
-                <img src="instagram.svg" alt="instagram" width="20" height="20">
+            <a href="https://www.instagram.com/suraj_inreallife/?hl=en">
+                <img src="instagram.svg" alt="instagram" width="30" height="30">
             </a>
 
         </div>
