--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
         }
 
         .container {
-            background-color: #fff;
+            background-color: #ffffff7d;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -50,7 +50,7 @@
 
 <body>
     <div class="container">
-        <h1>My Blog</h1>
+        <h1>Technical Blogs on DevOps, Cloud & More!!</h1>
         <p>Here, I share my insights, experiences, and thoughts on various topics. Feel free to explore and leave comments.</p>
 
         <!-- Add your blog posts here -->
