--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         }
 
         .container {
-            background-color: #fff;
+            background-color: #ffffff52;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
