--- a/blog.html
+++ b/blog.html
@@ -43,7 +43,7 @@
         }
 
         .link-section a:hover {
-            color: #007bff;
+            color: #020508;
         }
     </style>
 </head>
