--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
         }
 
         .link-section a:hover {
-            color: #007bff;
+            color: #01050a;
         }
     </style>
 </head>
