--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>Suraj Solanki</title>
     <style>
@@ -21,20 +20,21 @@
         }
 
         h1 {
-            text-align: center;
+            text-align: left;
             color: #333;
         }
 
         img {
             display: block;
             margin: 0 auto;
+            float: right;
             border-radius: 50%;
             width: 200px;
             height: 200px;
         }
 
         h3 {
-            text-align: center;
+            text-align: left;
             color: #333;
             margin-bottom: 20px;
         }
