--- a/blog.html
+++ b/blog.html
@@ -1,66 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <title>Technical Blogs on DevOps, Cloud & More!!</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-image: url('background.jpg');
-            background-size: cover;
-            color: #333;
-            margin: 0;
-            padding: 20px;
-        }
-
-        .container {
-            background-color: #ffffff7d;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            text-align: center;
-            color: #333;
-        }
-
-        h2 {
-            margin-top: 20px;
-            color: #333;
-        }
-
-        p {
-            line-height: 1.6;
-        }
-
-        .link-section a {
-            display: block;
-            margin-bottom: 10px;
-            text-decoration: none;
-            color: #333;
-            transition: color 0.3s;
-        }
-
-        .link-section a:hover {
-            color: #020508;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="container">
-        <h1>Technical Blogs on DevOps, Cloud & More!!</h1>
-        <p>Here, I share my insights, experiences, and thoughts on various topics. Feel free to explore and leave comments.</p>
-
-        <!-- Add your blog posts here -->
-
-        <div class="link-section">
-            <a href="https://medium.com/@surajblog/velero-for-kubernetes-backup-and-restore-10fba3a5efa4">Blog Post 1</a>
-            <a href="https://medium.com/@surajblog/external-secret-operator-integration-with-azure-key-vault-6eea4168bfeb">Blog Post 2</a>
-            <!-- Add more blog posts as needed -->
+    <header class="header">
+        <div class="container">
+            <h1 class="heading">Technical Blogs on DevOps, Cloud & More!!</h1>
+            <p class="description">Here, I share my insights, experiences, and thoughts on various topics. Feel free to explore and leave comments.</p>
         </div>
-    </div>
+    </header>
+
+    <main class="main">
+        <div class="container">
+            <section class="section">
+                <h2 class="section-heading">Blog Posts</h2>
+                <div class="blog-posts">
+                    <a href="https://medium.com/@surajblog/velero-for-kubernetes-backup-and-restore-10fba3a5efa4" class="blog-post-link">Blog Post 1</a>
+                    <a href="https://medium.com/@surajblog/external-secret-operator-integration-with-azure-key-vault-6eea4168bfeb" class="blog-post-link">Blog Post 2</a>
+                    <!-- Add more blog posts as needed -->
+                </div>
+            </section>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2023 Suraj Solanki</p>
+        </div>
+    </footer>
 </body>
 
 </html>
