--- a/contact.html
+++ b/contact.html
@@ -1,65 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
     <title>Contact Me</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-image: url('background.jpg');
-            background-size: cover;
-            color: #333;
-            margin: 0;
-            padding: 20px;
-        }
-
-        .container {
-            background-color: #ffffff52;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h1 {
-            text-align: center;
-            color: #333;
-        }
-
-        h2 {
-            margin-top: 20px;
-            color: #333;
-        }
-
-        p {
-            line-height: 1.6;
-        }
-
-        .link-section a {
-            display: block;
-            margin-bottom: 10px;
-            text-decoration: none;
-            color: #333;
-            transition: color 0.3s;
-        }
-
-        .link-section a:hover {
-            color: #01050a;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div class="container">
-        <h1>Contact Me</h1>
-        <p>Feel free to reach out to me at ssolanki724@email.com.</p>
-        <p>You can also connect with me through my social media profiles.</p>
-
-        <div class="social-links">
-            <a href="https://www.youtube.com/channel/UCOnzoAgntLFeKEsHWkL2x8A">YouTube</a>
-            <a href="https://www.linkedin.com/in/suraj-solanki">LinkedIn</a>
-            <a href="https://www.instagram.com/suraj_inreallife/?hl=en">Instagram</a>
+    <header class="header">
+        <div class="container">
+            <h1 class="heading">Contact Me</h1>
+            <p class="description">Feel free to reach out to me at ssolanki724@email.com.</p>
+            <p class="description">You can also connect with me through my social media profiles.</p>
         </div>
-    </div>
+    </header>
+
+    <main class="main">
+        <div class="container">
+            <section class="section">
+                <h2 class="section-heading">Social Media Links</h2>
+                <div class="social-links">
+                    <a href="https://www.youtube.com/channel/UCOnzoAgntLFeKEsHWkL2x8A" class="social-link">YouTube</a>
+                    <a href="https://www.linkedin.com/in/suraj-solanki" class="social-link">LinkedIn</a>
+                    <a href="https://www.instagram.com/suraj_inreallife/?hl=en" class="social-link">Instagram</a>
+                    <!-- Add more social media links as needed -->
+                </div>
+            </section>
+        </div>
+    </main>
+
+    <footer class="footer">
+        <div class="container">
+            <p>&copy; 2023 Suraj Solanki</p>
+        </div>
+    </footer>
 </body>
 
 </html>
