--- a/blog.html
+++ b/blog.html
@@ -21,20 +21,30 @@
                 <h2 class="section-heading">Blog Posts</h2>
                 <form action="#">
                     <div class="blog-posts">
-                        <input type="radio" id="post1" name="blog-post" value="https://medium.com/@surajblog/velero-for-kubernetes-backup-and-restore-10fba3a5efa4">
-                        <label for="post1">
-                            Velero for Kubernetes Backup and Restore
-                        </label><br>
+                        <input type="radio" id="post1" name="blog-post" value="Velero for Kubernetes Backup and Restore">
+                        <label for="post1">Velero for Kubernetes Backup and Restore</label><br>
                         
-                        <input type="radio" id="post2" name="blog-post" value="https://medium.com/@surajblog/external-secret-operator-integration-with-azure-key-vault-6eea4168bfeb">
-                        <label for="post2">
-                            External Secret Operator Integration with Azure Key Vault
-                        </label><br>
+                        <input type="radio" id="post2" name="blog-post" value="External Secret Operator Integration with Azure Key Vault">
+                        <label for="post2">External Secret Operator Integration with Azure Key Vault</label><br>
 
-                        <input type="radio" id="post3" name="blog-post" value="https://medium.com/@surajblog/your-blog-post-url">
-                        <label for="post3">
-                            Your Blog Post Title
-                        </label><br>
+                       
+                        <input type="radio" id="post3" name="blog-post" value="Simplified Deployment of Kubernetes Dashboard with ALB Ingress Controller">
+                        <label for="post3">Simplified Deployment of Kubernetes Dashboard with ALB Ingress Controller</label><br>
+
+                        <input type="radio" id="post4" name="blog-post" value="Mount AWS S3 Bucket On Amazon EC2">
+                        <label for="post4">Mount AWS S3 Bucket On Amazon EC2</label><br>
+
+                        <input type="radio" id="post5" name="blog-post" value="Effortless Kubernetes Cluster Deployment with Kubeadm and Containerd">
+                        <label for="post5">Effortless Kubernetes Cluster Deployment with Kubeadm and Containerd</label><br>
+
+                        <input type="radio" id="post6" name="blog-post" value="Streamlining Vault Resources Deployment with Terraform and Jenkins CI/CD Pipeline">
+                        <label for="post6">Streamlining Vault Resources Deployment with Terraform and Jenkins CI/CD Pipeline</label><br>
+
+                        <input type="radio" id="post7" name="blog-post" value="Chaos Testing with EKS Cluster and ArgoCD">
+                        <label for="post7">Chaos Testing with EKS Cluster and ArgoCD</label><br>
+
+                        <input type="radio" id="post8" name="blog-post" value="Hashicorp Vault Integration with Google OIDC Provider">
+                        <label for="post8">Hashicorp Vault Integration with Google OIDC Provider</label><br>
                     </div>
                 </form>
             </section>
