--- a/blog.html
+++ b/blog.html
@@ -19,32 +19,26 @@
         <div class="container">
             <section class="section">
                 <h2 class="section-heading">Blog Posts</h2>
-                <form action="#">
-                    <div class="blog-posts">
-                        <label for="post1">
-                            <a href="https://medium.com/@surajblog/velero-for-kubernetes-backup-and-restore-10fba3a5efa4" target="_blank">
-                                <input type="radio" id="post1" name="blog-post" value="Velero for Kubernetes Backup and Restore">
-                                Velero for Kubernetes Backup and Restore
-                            </a>
-                        </label><br>
-                        
-                        <label for="post2">
-                            <a href="https://medium.com/@surajblog/external-secret-operator-integration-with-azure-key-vault-6eea4168bfeb" target="_blank">
-                                <input type="radio" id="post2" name="blog-post" value="External Secret Operator Integration with Azure Key Vault">
-                                External Secret Operator Integration with Azure Key Vault
-                            </a>
-                        </label><br>
-
-                        <!-- Add more labels for each blog post -->
-                        <!-- Example -->
-                        <label for="post3">
-                            <a href="https://medium.com/@surajblog/simplified-deployment-of-kubernetes-dashboard-with-alb-ingress-controller-bf3396c0dc54" target="_blank">
-                                <input type="radio" id="post3" name="blog-post" value="Simplified Deployment of Kubernetes Dashboard with ALB Ingress Controller">
-                                Simplified Deployment of Kubernetes Dashboard with ALB Ingress Controller
-                            </a>
-                        </label><br>
-                    </div>
-                </form>
+                <ul class="blog-posts">
+                    <li>
+                        <a href="https://medium.com/@surajblog/velero-for-kubernetes-backup-and-restore-10fba3a5efa4" target="_blank">
+                            Velero for Kubernetes Backup and Restore
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://medium.com/@surajblog/external-secret-operator-integration-with-azure-key-vault-6eea4168bfeb" target="_blank">
+                            External Secret Operator Integration with Azure Key Vault
+                        </a>
+                    </li>
+                    <!-- Add more list items for each blog post -->
+                    <!-- Example -->
+                    <li>
+                        <a href="https://medium.com/@surajblog/simplified-deployment-of-kubernetes-dashboard-with-alb-ingress-controller-bf3396c0dc54" target="_blank">
+                            Simplified Deployment of Kubernetes Dashboard with ALB Ingress Controller
+                        </a>
+                    </li>
+                    <!-- Add more list items for other blog posts -->
+                </ul>
             </section>
         </div>
     </main>
