--- a/blog.html
+++ b/blog.html
@@ -30,14 +30,42 @@
                             External Secret Operator Integration with Azure Key Vault
                         </a>
                     </li>
-                    <!-- Add more list items for each blog post -->
-                    <!-- Example -->
                     <li>
                         <a href="https://medium.com/@surajblog/simplified-deployment-of-kubernetes-dashboard-with-alb-ingress-controller-bf3396c0dc54" target="_blank">
                             Simplified Deployment of Kubernetes Dashboard with ALB Ingress Controller
                         </a>
                     </li>
-                    <!-- Add more list items for other blog posts -->
+                    <li>
+                        <a href="https://medium.com/@surajblog/vault-integration-with-google-oidc-provider-f3e12c9d3ef7" target="_blank">
+                            Hashicorp Vault Integration with Google OIDC 
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://medium.com/@surajblog/chaos-testing-with-eks-cluster-and-argocd-cb2f43961dbc" target="_blank">
+                            Chaos Testing with EKS Cluster and ArgoCD
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://medium.com/@surajblog/streamlining-vault-resources-deployment-with-terraform-and-jenkins-ci-cd-pipeline-73683c3994bf" target="_blank">
+                            Streamlining Vault Resources Deployment with Terraform and Jenkins CI/CD Pipeline
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://medium.com/@surajblog/effortless-kubernetes-cluster-deployment-with-kubeadm-and-containerd-58cc58f2d023" target="_blank">
+                            Effortless Kubernetes Cluster Deployment with Kubeadm and Containerd
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://medium.com/@surajblog/mount-aws-s3-bucket-on-amazon-ec2-9f18b48d4f04" target="_blank">
+                            Mount AWS S3 Bucket On Amazon EC2
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://medium.com/@surajblog/hashicorp-vault-multi-node-cluster-setup-on-aws-ec2-with-dynamodb-ebd57a0070e2" target="_blank">
+                            Hashicorp Vault Multi Node Cluster Setup on AWS EC2 with DynamoDB
+                        </a>
+                    </li>
+                  
                 </ul>
             </section>
         </div>
