--- a/index.html
+++ b/index.html
@@ -24,30 +24,6 @@
     <main class="main">
         <div class="container">
             <section class="section">
-                <h2 class="section-heading">Explore More</h2>
-                <a href="blog.html" class="link">Visit Blog</a>
-                <a href="contact.html" class="link">Contact Me</a>
-            </section>
-
-            <section class="section">
-                <h2 class="section-heading">Connect with Me</h2>
-                <div class="social-links">
-                    <a href="https://www.linkedin.com/in/suraj-solanki/" class="social-link">
-                        <img src="linkedin.png" alt="LinkedIn" width="20" height="20">
-                    </a>
-                    <a href="https://surajblog.medium.com" class="social-link">
-                        <img src="medium.svg" alt="Medium" width="20" height="20">
-                    </a>
-                    <a href="https://www.youtube.com/channel/UCOnzoAgntLFeKEsHWkL2x8A" class="social-link">
-                        <img src="yt.png" alt="YouTube" width="20" height="20">
-                    </a>
-                    <a href="https://www.instagram.com/suraj_inreallife/?hl=en" class="social-link">
-                        <img src="instagram.svg" alt="Instagram" width="20" height="20">
-                    </a>
-                </div>
-            </section>
-
-            <section class="section">
                 <h2 class="section-heading">Certifications</h2>
                 <ul class="certifications">
                     <li><a href="https://www.credly.com/badges/4c3d4dc1-750e-45f3-842a-540ea76370a8/public_url">AWS Certified Solutions Architect – Associate</a></li>
@@ -58,6 +34,42 @@
                     <li><a href="https://www.credly.com/badges/41de68f6-a999-4f96-99ba-96a183e7fc78/public_url">Red Hat Certified System Administrator (RHCSA)</a></li>
                     <li><a href="https://www.credly.com/badges/7c3c9c74-849a-42ba-b262-35b8e7b08160/public_url">Red Hat Certified OpenShift Administrator</a></li>
                 </ul>
+            </section>
+
+            <section class="section">
+                <h2 class="section-heading">Explore More</h2>
+                <div class="explore-links">
+                    <a href="blog.html" class="explore-link">
+                        <div class="link-box">
+                            <span class="link-title">Visit Blog</span>
+                            <span class="link-description">Read my latest articles and insights</span>
+                        </div>
+                    </a>
+                    <a href="contact.html" class="explore-link">
+                        <div class="link-box">
+                            <span class="link-title">Contact Me</span>
+                            <span class="link-description">Get in touch with me</span>
+                        </div>
+                    </a>
+                </div>
+            </section>
+
+            <section class="section">
+                <h2 class="section-heading">Connect with Me</h2>
+                <div class="social-links">
+                    <a href="https://www.linkedin.com/in/suraj-solanki/" class="social-link">
+                        <img src="linkedin.png" alt="LinkedIn" width="30" height="30">
+                    </a>
+                    <a href="https://surajblog.medium.com" class="social-link">
+                        <img src="medium.svg" alt="Medium" width="30" height="30">
+                    </a>
+                    <a href="https://www.youtube.com/channel/UCOnzoAgntLFeKEsHWkL2x8A" class="social-link">
+                        <img src="yt.png" alt="YouTube" width="30" height="30">
+                    </a>
+                    <a href="https://www.instagram.com/suraj_inreallife/?hl=en" class="social-link">
+                        <img src="instagram.svg" alt="Instagram" width="30" height="30">
+                    </a>
+                </div>
             </section>
         </div>
     </main>
