--- a/index.html
+++ b/index.html
@@ -10,6 +10,25 @@
 <body>
     <header class="header">
         <div class="container">
+            <nav class="clearfix border-bottom border-light-gray">
+                <div class="nav-left">
+                    <a href="#" class="nav-button">Suraj Solanki</a>
+                </div>
+                <div class="nav-right">
+                    <ul class="list-reset m0 nav-collapse">
+                        <li class="inline-block m0">
+                            <a href="blog.html" class="nav-button">Writing</a>
+                        </li>
+                        <li class="inline-block m0">
+                            <a href="contact.html" class="nav-button">Skills</a>
+                        </li>
+                        <li class="inline-block m0">
+                            <a href="contact.html" class="nav-button">Contacts</a>
+                        </li>
+                        <!-- Add more navigation items as needed -->
+                    </ul>
+                </div>
+            </nav>
             <h1 class="heading">Suraj Solanki</h1>
             <h2 class="sub-heading">Senior DevOps Engineer</h2>
             <img class="profile-image" src="profile.jpg" alt="Suraj Solanki">
