--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <nav class="clearfix border-bottom border-light-gray">
                 <div class="nav-left">
-                    <a href="#" class="nav-button">Suraj Solanki</a>
+                    <a href="https://surajsolanki724.github.io" class="nav-button">Suraj Solanki</a>
                 </div>
                 <div class="nav-right">
                     <ul class="list-reset m0 nav-collapse">
