--- a/index.html
+++ b/index.html
@@ -8,27 +8,24 @@
 </head>
 
 <body>
+    <nav class="clearfix border-bottom border-light-gray">
+        <div class="left">
+            <a href="https://surajsolanki724.github.io" class="button py2 button-transparent nav-button caps">Suraj Solanki</a>
+        </div>
+        <ul class="right list-reset m0 nav-collapse">
+            <li class="inline-block m0">
+                <a href="writing.html" class="button button-transparent py2 h6 nav-button caps">Writing</a>
+            </li>
+            <li class="inline-block m0">
+                <a href="skills.html" class="button button-transparent py2 h6 nav-button caps">Skills</a>
+            </li>
+            <li class="inline-block m0">
+                <a href="contact.html" class="button button-transparent py2 h6 nav-button caps">Contacts</a>
+            </li>
+        </ul>
+    </nav>
     <header class="header">
         <div class="container">
-            <nav class="clearfix border-bottom border-light-gray">
-                <div class="nav-left">
-                    <a href="https://surajsolanki724.github.io" class="nav-button">Suraj Solanki</a>
-                </div>
-                <div class="nav-right">
-                    <ul class="list-reset m0 nav-collapse">
-                        <li class="inline-block m0">
-                            <a href="blog.html" class="nav-button">Writing</a>
-                        </li>
-                        <li class="inline-block m0">
-                            <a href="contact.html" class="nav-button">Skills</a>
-                        </li>
-                        <li class="inline-block m0">
-                            <a href="contact.html" class="nav-button">Contacts</a>
-                        </li>
-                        <!-- Add more navigation items as needed -->
-                    </ul>
-                </div>
-            </nav>
             <h1 class="heading">Suraj Solanki</h1>
             <h2 class="sub-heading">Senior DevOps Engineer</h2>
             <img class="profile-image" src="profile.jpg" alt="Suraj Solanki">
