--- a/index.html
+++ b/index.html
@@ -8,23 +8,25 @@
 </head>
 
 <body>
-    <nav class="clearfix border-bottom border-light-gray">
+    <header class="header">
         <div class="left">
             <a href="https://surajsolanki724.github.io" class="button py2 button-transparent nav-button caps">Suraj Solanki</a>
         </div>
-        <ul class="right list-reset m0 nav-collapse">
-            <li class="inline-block m0">
-                <a href="writing.html" class="button button-transparent py2 h6 nav-button caps">Writing</a>
-            </li>
-            <li class="inline-block m0">
-                <a href="skills.html" class="button button-transparent py2 h6 nav-button caps">Skills</a>
-            </li>
-            <li class="inline-block m0">
-                <a href="contact.html" class="button button-transparent py2 h6 nav-button caps">Contacts</a>
-            </li>
-        </ul>
-    </nav>
-    <header class="header">
+        <div class="right">
+            <nav class="list-reset">
+                <ul class="right list-reset m0 nav-collapse">
+                    <li class="inline-block m0">
+                        <a href="writing.html" class="button button-transparent py2 h6 nav-button caps">Writing</a>
+                    </li>
+                    <li class="inline-block m0">
+                        <a href="skills.html" class="button button-transparent py2 h6 nav-button caps">Skills</a>
+                    </li>
+                    <li class="inline-block m0">
+                        <a href="contact.html" class="button button-transparent py2 h6 nav-button caps">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
         <div class="container">
             <h1 class="heading">Suraj Solanki</h1>
             <h2 class="sub-heading">Senior DevOps Engineer</h2>
